lox-tests/tests/assignment/to_this.stderr
ERROR: Invalid assignment target
 --> 3:5
  |
3 |     this = "value"; // Error at '=': Invalid assignment target.
  |     ^----^
